--- a/training/pyproject.toml
+++ b/training/pyproject.toml
@@ -6,6 +6,8 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "ipykernel>=6.29.5",
+    "jupyterlab>=4.3.5",
+    "marimo>=0.11.6",
     "matplotlib>=3.10.0",
     "onnx>=1.17.0",
     "onnxscript>=0.2.0",
