--- a/web/package.json
+++ b/web/package.json
@@ -17,7 +17,8 @@
     "onnxruntime-web": "^1.20.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "recharts": "2"
+    "recharts": "2",
+    "vite-plugin-static-copy": "^2.2.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
@@ -33,6 +34,8 @@
     "postcss-simple-vars": "^7.0.1",
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.22.0",
-    "vite": "^6.1.0"
+    "vite": "^6.1.0",
+    "vite-plugin-top-level-await": "^1.5.0",
+    "vite-plugin-wasm": "^3.4.1"
   }
 }
